# cbible

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cbible.cbp  cbible.depend  cbible.kdev4  main.cpp
.kdev4/: cbible.kdev4
elisp/: cbible.el
src/: CMakeLists.txt  Options.cpp  Options.hpp  SwordFuncs.cpp  SwordFuncs.hpp  cbible.cpp  swordfuncs.cpp  swordfuncs.hpp  utilities.hpp
tests/: CMakeLists.txt  cbibleTests.cpp  run_tests.sh
tests/docker/: Dockerfile
tests/swordtest/mods.d/: kjv.conf
tests/swordtest/modules/texts/ztext/kjv/: ot.bzz
tests/swordtest/sword/mods.d/: personal.conf
tests/swordtest/sword/modules/comments/rawfiles/personal/: ot  ot.vss
tests/swordtest/sword/modules/texts/ztext/kjv/: nt.bzz
