cmake_minimum_required(VERSION 2.6)
project(cbible)
include_directories("/usr/include/sword")
link_directories("/usr/lib")
link_libraries(sword readline)
set(gcc_cflags "-g3 -std=c++11")
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${gcc_cflags}")
set(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${gcc_cflags}")
add_executable(cbible SwordFuncs.cpp cbible.cpp)
target_link_libraries(cbible sword)
install(TARGETS cbible RUNTIME DESTINATION bin)
